--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-quizzical",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "react-quizzical React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -18,8 +18,7 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": "16.x"
   },
